initial style for admin-login

--- a/src/styles.less
+++ b/src/styles.less
@@ -5,3 +5,8 @@
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.container {
+  width: 95%;
+  margin: 0 auto;
+}
