--- a/src/app/components/admin-login/admin-login.component.less
+++ b/src/app/components/admin-login/admin-login.component.less
@@ -1,9 +1,11 @@
-.example-form {
-  min-width: 150px;
-  max-width: 500px;
-  width: 100%;
-}
 
-.example-full-width {
-  width: 100%;
+.login-form {
+  width: 33%;
+  margin: 0 auto;
+  margin-top: 30px;
+  
+  .full-width {
+    width: 100%;
+  }
+  
 }
