producmanager and admin-home created(also added sub router)

--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -1,19 +1,27 @@
-<mat-toolbar color="primary" class="navbar">
-  <div>
-    <a mat-button (click)="sidenav.toggle()">
-      {{ sidenavOpen ? '-' : '+' }}
-    </a>
-    Admin
-  </div>
-  <div class="nav-links">
-    <span (click)="logout()">Logout</span>
-  </div>
-</mat-toolbar>
-<mat-sidenav-container class="sidebar-container">
-  <mat-sidenav class="side-nav" #sidenav mode="side" [(opened)]="sidenavOpen">
-    <h2>Navigation</h2>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <router-outlet name="adminRouter"></router-outlet>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+<div id="admin-page">
+  <mat-toolbar color="primary" class="navbar">
+    <div>
+      <a mat-button (click)="sidenav.toggle()">
+        {{ sidenavOpen ? '-' : '+' }}
+      </a>
+      Admin
+    </div>
+    <div class="nav-links">
+      <span (click)="logout()">Logout</span>
+    </div>
+  </mat-toolbar>
+  <mat-sidenav-container class="sidebar-container">
+    <mat-sidenav class="side-nav" #sidenav mode="side" [(opened)]="sidenavOpen">
+      <h2>Navigation</h2>
+      <ul>
+        <li><a mat-button (click)="sidenav.close()" [routerLink]="'/admin/'">Home</a></li>
+        <li>
+          <a mat-button (click)="sidenav.close()" [routerLink]="'/admin/admin-products'">Products</a>
+        </li>
+      </ul>
+    </mat-sidenav>
+    <mat-sidenav-content class="sidebar-content">
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
