--- a/src/app/components/admin/admin.component.less
+++ b/src/app/components/admin/admin.component.less
@@ -1,26 +1,33 @@
-.navbar {
-  justify-content: space-between;
-  span {
-    padding-right: 1rem;
-  }
-  .nav-links {
+#admin-page {
+  .navbar {
+    justify-content: space-between;
+
     span {
-      cursor: pointer;
+      padding-right: 1rem;
+    }
+
+    .nav-links {
+      span {
+        cursor: pointer;
+      }
     }
   }
-}
 
-.sidebar-container {
-  position: absolute;
-  top: 4em;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: #eee;
-  padding-top: 1em;
-}
+  .sidebar-container {
+    position: absolute;
+    top: 4em;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #eee;
+  }
 
-.side-nav {
-  width: 15%;
-  padding: 1em 0 0 1em;
+  .side-nav {
+    width: 15%;
+    padding: 1em 0 0 1em;
+  }
+  
+  .sidebar-content {
+    padding: 1em 0 0 1em;
+  }
 }
