--- a/src/app/components/products-table/products-table.component.less
+++ b/src/app/components/products-table/products-table.component.less
@@ -1,7 +1,13 @@
-table {
-  width: 100%;
-}
+.table-component {
+  table {
+    width: 100%;
+  }
 
-th.mat-sort-header-sorted {
-  color: black;
+  th.mat-sort-header-sorted {
+    color: black;
+  }
+
+  .material-icons.action {
+    cursor: pointer;
+  }
 }
