--- a/src/app/components/products-table/products-table.component.html
+++ b/src/app/components/products-table/products-table.component.html
@@ -1,30 +1,22 @@
-<div class="mat-elevation-z8">
-  <table mat-table [dataSource]="productItems" class="mat-elevation-z8">
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let product">{{ product.name }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef>Description</th>
-      <td mat-cell *matCellDef="let product">{{ product.description }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="quantity">
-      <th mat-header-cell *matHeaderCellDef>Quantity</th>
-      <td mat-cell *matCellDef="let product">{{ product.quantity }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="price">
-      <th mat-header-cell *matHeaderCellDef>Price</th>
-      <td mat-cell *matCellDef="let product">
-        {{ product.price <= 0 ? 'Free' : (product.price | currency) }}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="category">
-      <th mat-header-cell *matHeaderCellDef>Category</th>
-      <td mat-cell *matCellDef="let product">{{ product.category }}</td>
+<div class="table-component">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <ng-container
+      *ngFor="let column of displayedColumns; index as i"
+      matColumnDef="{{ column }}"
+    >
+      <th mat-header-cell *matHeaderCellDef>{{ displayedColumns[i] }}</th>
+      <span *ngIf="column !== 'actions'">
+        <td mat-cell *matCellDef="let item">{{ item[column] }}</td></span
+      >
+      <span *ngIf="column === 'actions'">
+        <td mat-cell *matCellDef="let item">
+          <span *ngFor="let action of actions">
+            <i class="material-icons action">
+              {{ action === 'delete' ? 'delete' : 'edit' }}
+            </i>
+          </span>
+        </td>
+      </span>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
