name changed to table component

--- a/src/app/components/product-manager/product-manager.component.html
+++ b/src/app/components/product-manager/product-manager.component.html
@@ -1,5 +1,5 @@
-<app-products-table
+<app-table
   [items]="products"
   [displayedColumns]="['name', 'description', 'quantity', 'price', 'category']"
   [actions]="['delete', 'update']"
-></app-products-table>
+></app-table>
