--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,3 +1,10 @@
+<!-- 
+  <app-table
+  [items]="items: Array<Object>"
+  [displayedColumns]="displayedColumns: Array<String>" -- ['name', 'description', 'quantity', 'price', 'category']
+  [actions]="actions: Array<String>"> -- ['delete', 'update']
+  </app-table>
+ -->
 <div class="table-component">
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <ng-container
