delete product service

--- a/src/app/components/product-manager/product-manager.component.html
+++ b/src/app/components/product-manager/product-manager.component.html
@@ -2,4 +2,5 @@
   [items]="products"
   [displayedColumns]="['name', 'description', 'quantity', 'price', 'category']"
   [actions]="['delete', 'update']"
+  (deleteItem)="deleteProduct($event)"
 ></app-table>
