--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -18,7 +18,7 @@
       <span *ngIf="column === 'actions'">
         <td mat-cell *matCellDef="let item">
           <span *ngFor="let action of actions">
-            <i class="material-icons action" (click)="action === 'delete' ? delete(item.id) : update(item.id)">
+            <i class="material-icons action" (click)="action === 'delete' ? deleteDialogOpen(item.id) : update(item.id)">
               {{ action === 'delete' ? 'delete' : 'edit' }}
             </i>
           </span>
