--- a/src/app/components/product-manager/product-manager.component.html
+++ b/src/app/components/product-manager/product-manager.component.html
@@ -1,6 +1,13 @@
 <app-table
   [items]="products"
-  [displayedColumns]="['name', 'description', 'quantity', 'price', 'category']"
+  [displayedColumns]="[
+    'name',
+    'description',
+    'quantity',
+    'photoUrl',
+    'price',
+    'category'
+  ]"
   [actions]="['delete', 'update']"
   (deleteItem)="deleteProduct($event)"
 ></app-table>
