--- a/src/app/components/product-manager/product-manager.component.html
+++ b/src/app/components/product-manager/product-manager.component.html
@@ -11,3 +11,9 @@
   [actions]="['delete', 'update']"
   (deleteItem)="deleteProduct($event)"
 ></app-table>
+
+<button mat-fab (click)="addProductDialogOpen()">
+  <i class="material-icons action">
+    add
+  </i>
+</button>
